--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=register
 
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
+
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/db/migrations/V1__initial_schema.sql
