--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
 
+register.security.secret=${JWT_SECRET}
+
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/db/migrations/V1__initial_schema.sql
